src/Milestone3/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult
Rule 2     PackageClause -> PACKAGE IDENT
Rule 3     ImportDeclMult -> ImportDecl SEMICOLON ImportDeclMult
Rule 4     ImportDeclMult -> <empty>
Rule 5     ImportDecl -> IMPORT ImportSpec
Rule 6     ImportDecl -> IMPORT LPAREN ImportSpecMult RPAREN
Rule 7     ImportSpecMult -> ImportSpec SEMICOLON ImportSpecMult
Rule 8     ImportSpecMult -> <empty>
Rule 9     ImportSpec -> PERIOD ImportPath
Rule 10    ImportSpec -> IDENT ImportPath
Rule 11    ImportSpec -> ImportPath
Rule 12    ImportPath -> STRING
Rule 13    TopLevelDeclMult -> TopLevelDecl SEMICOLON TopLevelDeclMult
Rule 14    TopLevelDeclMult -> <empty>
Rule 15    TopLevelDecl -> Decl
Rule 16    TopLevelDecl -> FuncDecl
Rule 17    Decl -> ConstDecl
Rule 18    Decl -> VarDecl
Rule 19    Decl -> TypeDecl
Rule 20    ConstDecl -> CONST ConstSpec
Rule 21    ConstDecl -> CONST LPAREN ConstSpecMult RPAREN
Rule 22    ConstSpecMult -> ConstSpec SEMICOLON ConstSpecMult
Rule 23    ConstSpecMult -> <empty>
Rule 24    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 25    ConstSpec -> IdentifierList IDENT ASSIGN ExpressionList
Rule 26    ConstSpec -> IdentifierList IDENT PERIOD IDENT ASSIGN ExpressionList
Rule 27    IdentifierList -> IDENT
Rule 28    IdentifierList -> IDENT COMMA IdentifierList
Rule 29    ArrayType -> LBRACK ArrayLength RBRACK ElementType
Rule 30    ArrayLength -> Expr
Rule 31    ElementType -> Type
Rule 32    ElementType -> IDENT
Rule 33    ElementType -> IDENT PERIOD IDENT
Rule 34    StructType -> STRUCT LBRACE FieldDeclMult RBRACE
Rule 35    FieldDeclMult -> FieldDeclMult FieldDecl SEMICOLON
Rule 36    FieldDeclMult -> <empty>
Rule 37    FieldDecl -> IdentifierList Type
Rule 38    FieldDecl -> IdentifierList IDENT
Rule 39    FieldDecl -> IdentifierList IDENT PERIOD IDENT
Rule 40    FieldDecl -> EmbeddedField
Rule 41    FieldDecl -> IdentifierList Type Tag
Rule 42    FieldDecl -> IdentifierList IDENT Tag
Rule 43    FieldDecl -> IdentifierList IDENT PERIOD IDENT Tag
Rule 44    FieldDecl -> EmbeddedField Tag
Rule 45    Tag -> STRING
Rule 46    EmbeddedField -> MUL IDENT
Rule 47    EmbeddedField -> IDENT
Rule 48    EmbeddedField -> MUL IDENT PERIOD IDENT
Rule 49    EmbeddedField -> IDENT PERIOD IDENT
Rule 50    PointerType -> MUL Type
Rule 51    PointerType -> MUL IDENT
Rule 52    PointerType -> MUL IDENT PERIOD IDENT
Rule 53    SliceType -> LBRACK RBRACK ElementType
Rule 54    MapType -> MAP LBRACK KeyType RBRACK ElementType
Rule 55    KeyType -> Type
Rule 56    KeyType -> IDENT
Rule 57    KeyType -> IDENT PERIOD IDENT
Rule 58    FunctionType -> FUNC Signature
Rule 59    ExpressionList -> Expr
Rule 60    ExpressionList -> ExpressionList COMMA Expr
Rule 61    Expr -> UnaryExpr
Rule 62    Expr -> Expr LOR UnaryExpr
Rule 63    Expr -> Expr LAND UnaryExpr
Rule 64    Expr -> Expr EQL UnaryExpr
Rule 65    Expr -> Expr NEQ UnaryExpr
Rule 66    Expr -> Expr LSS UnaryExpr
Rule 67    Expr -> Expr LEQ UnaryExpr
Rule 68    Expr -> Expr GTR UnaryExpr
Rule 69    Expr -> Expr GEQ UnaryExpr
Rule 70    Expr -> Expr ADD UnaryExpr
Rule 71    Expr -> Expr SUB UnaryExpr
Rule 72    Expr -> Expr OR UnaryExpr
Rule 73    Expr -> Expr XOR UnaryExpr
Rule 74    Expr -> Expr MUL UnaryExpr
Rule 75    Expr -> Expr QUO UnaryExpr
Rule 76    Expr -> Expr REM UnaryExpr
Rule 77    Expr -> Expr SHL UnaryExpr
Rule 78    Expr -> Expr SHR UnaryExpr
Rule 79    Expr -> Expr AND UnaryExpr
Rule 80    Expr -> Expr AND_NOT UnaryExpr
Rule 81    UnaryExpr -> PrimaryExpr
Rule 82    UnaryExpr -> ADD UnaryExpr
Rule 83    UnaryExpr -> SUB UnaryExpr
Rule 84    UnaryExpr -> NOT UnaryExpr
Rule 85    UnaryExpr -> XOR UnaryExpr
Rule 86    UnaryExpr -> MUL UnaryExpr
Rule 87    UnaryExpr -> AND UnaryExpr
Rule 88    Lit -> BasicLit
Rule 89    Lit -> CompositeLit
Rule 90    Lit -> FunctionLit
Rule 91    BasicLit -> INT
Rule 92    BasicLit -> FLOAT
Rule 93    BasicLit -> IMAG
Rule 94    BasicLit -> RUNE
Rule 95    BasicLit -> STRING
Rule 96    CompositeLit -> StructType Arguments
Rule 97    CompositeLit -> ArrayType LiteralValue
Rule 98    CompositeLit -> SliceType LiteralValue
Rule 99    CompositeLit -> MapType LiteralValue
Rule 100   CompositeLit -> IDENT LiteralValue
Rule 101   CompositeLit -> IDENT PERIOD IDENT LiteralValue
Rule 102   LiteralValue -> LBRACE ElementList COMMA RBRACE
Rule 103   LiteralValue -> LBRACE ElementList RBRACE
Rule 104   LiteralValue -> LBRACE RBRACE
Rule 105   ElementList -> KeyedElement
Rule 106   ElementList -> ElementList COMMA KeyedElement
Rule 107   KeyedElement -> Element
Rule 108   KeyedElement -> Key COLON Element
Rule 109   Key -> Expr
Rule 110   Key -> LiteralValue
Rule 111   Element -> Expr
Rule 112   Element -> LiteralValue
Rule 113   FunctionLit -> FUNC Signature FunctionBody
Rule 114   PrimaryExpr -> Lit
Rule 115   PrimaryExpr -> IDENT
Rule 116   PrimaryExpr -> IDENT PERIOD IDENT
Rule 117   PrimaryExpr -> LPAREN Expr RPAREN
Rule 118   PrimaryExpr -> PrimaryExpr Selector
Rule 119   PrimaryExpr -> PrimaryExpr Index
Rule 120   PrimaryExpr -> PrimaryExpr Slice
Rule 121   PrimaryExpr -> PrimaryExpr Arguments
Rule 122   Index -> LBRACK Expr RBRACK
Rule 123   Selector -> PERIOD IDENT
Rule 124   Slice -> LBRACK Expr COLON Expr RBRACK
Rule 125   Slice -> LBRACK COLON Expr RBRACK
Rule 126   Slice -> LBRACK Expr COLON RBRACK
Rule 127   Slice -> LBRACK COLON RBRACK
Rule 128   Slice -> LBRACK COLON Expr COLON Expr RBRACK
Rule 129   Slice -> LBRACK Expr COLON Expr COLON Expr RBRACK
Rule 130   Arguments -> LPAREN RPAREN
Rule 131   Arguments -> LPAREN ExpressionList RPAREN
Rule 132   Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 133   Arguments -> LPAREN TypeT RPAREN
Rule 134   Arguments -> LPAREN TypeT COMMA RPAREN
Rule 135   Arguments -> LPAREN TypeT COMMA ExpressionList RPAREN
Rule 136   Arguments -> LPAREN TypeT COMMA ExpressionList COMMA RPAREN
Rule 137   Arguments -> LPAREN IDENT RPAREN
Rule 138   Arguments -> LPAREN IDENT COMMA RPAREN
Rule 139   Arguments -> LPAREN IDENT COMMA ExpressionList RPAREN
Rule 140   Arguments -> LPAREN IDENT COMMA ExpressionList COMMA RPAREN
Rule 141   Arguments -> LPAREN IDENT PERIOD IDENT RPAREN
Rule 142   Arguments -> LPAREN IDENT PERIOD IDENT COMMA RPAREN
Rule 143   Arguments -> LPAREN IDENT PERIOD IDENT COMMA ExpressionList RPAREN
Rule 144   Arguments -> LPAREN IDENT PERIOD IDENT COMMA ExpressionList COMMA RPAREN
Rule 145   TypeDecl -> TYPE TypeSpec
Rule 146   TypeDecl -> TYPE LPAREN TypeSpecMult RPAREN
Rule 147   TypeSpecMult -> TypeSpec SEMICOLON TypeSpecMult
Rule 148   TypeSpecMult -> <empty>
Rule 149   TypeSpec -> AliasDecl
Rule 150   TypeSpec -> Typedef
Rule 151   AliasDecl -> IDENT ASSIGN Type
Rule 152   AliasDecl -> IDENT ASSIGN IDENT
Rule 153   AliasDecl -> IDENT ASSIGN IDENT PERIOD IDENT
Rule 154   Typedef -> IDENT Type
Rule 155   Typedef -> IDENT IDENT
Rule 156   Typedef -> IDENT IDENT PERIOD IDENT
Rule 157   VarDecl -> VAR VarSpec
Rule 158   VarDecl -> VAR LPAREN VarMult RPAREN
Rule 159   VarMult -> VarSpec SEMICOLON VarMult
Rule 160   VarMult -> <empty>
Rule 161   VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 162   VarSpec -> IdentifierList IDENT ASSIGN ExpressionList
Rule 163   VarSpec -> IdentifierList IDENT PERIOD IDENT ASSIGN ExpressionList
Rule 164   VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 165   VarSpec -> IdentifierList Type
Rule 166   VarSpec -> IdentifierList IDENT
Rule 167   VarSpec -> IdentifierList IDENT PERIOD IDENT
Rule 168   ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 169   FuncDecl -> FUNC FunctionName Signature FunctionBody
Rule 170   FuncDecl -> FUNC FunctionName Signature
Rule 171   FunctionName -> IDENT
Rule 172   FunctionBody -> Block
Rule 173   Signature -> Parameters Result
Rule 174   Signature -> Parameters
Rule 175   Parameters -> LPAREN RPAREN
Rule 176   Parameters -> LPAREN ParameterList RPAREN
Rule 177   Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 178   ParameterList -> ParameterDecl
Rule 179   ParameterList -> ParameterList COMMA IDENT
Rule 180   ParameterList -> ParameterList COMMA IDENT PERIOD IDENT
Rule 181   ParameterList -> ParameterList COMMA Type
Rule 182   ParameterList -> ParameterList COMMA ParameterDecl
Rule 183   ParameterDecl -> IdentifierList Type
Rule 184   ParameterDecl -> IdentifierList IDENT
Rule 185   ParameterDecl -> IdentifierList IDENT PERIOD IDENT
Rule 186   Result -> Parameters
Rule 187   Result -> Type
Rule 188   Result -> IDENT
Rule 189   Result -> IDENT PERIOD IDENT
Rule 190   StatementList -> Statement SEMICOLON StatementList
Rule 191   StatementList -> <empty>
Rule 192   Statement -> Decl
Rule 193   Statement -> LabeledStmt
Rule 194   Statement -> SimpleStmt
Rule 195   Statement -> GotoStmt
Rule 196   Statement -> ReturnStmt
Rule 197   Statement -> BreakStmt
Rule 198   Statement -> ContinueStmt
Rule 199   Statement -> FallthroughStmt
Rule 200   Statement -> Block
Rule 201   Statement -> IfStmt
Rule 202   Statement -> SwitchStmt
Rule 203   Statement -> ForStmt
Rule 204   LabeledStmt -> Label COLON Statement
Rule 205   Label -> IDENT
Rule 206   SimpleStmt -> EmptyStmt
Rule 207   SimpleStmt -> ExpressionStmt
Rule 208   SimpleStmt -> IncDecStmt
Rule 209   SimpleStmt -> Assignment
Rule 210   SimpleStmt -> ShortVarDecl
Rule 211   EmptyStmt -> <empty>
Rule 212   ExpressionStmt -> Expr
Rule 213   IncDecStmt -> Expr INC
Rule 214   IncDecStmt -> Expr DEC
Rule 215   Assignment -> ExpressionList assign_op ExpressionList
Rule 216   assign_op -> add_op_assign
Rule 217   assign_op -> mul_op_assign
Rule 218   assign_op -> ASSIGN
Rule 219   add_op_assign -> ADD_ASSIGN
Rule 220   add_op_assign -> SUB_ASSIGN
Rule 221   add_op_assign -> OR_ASSIGN
Rule 222   add_op_assign -> XOR_ASSIGN
Rule 223   mul_op_assign -> MUL_ASSIGN
Rule 224   mul_op_assign -> QUO_ASSIGN
Rule 225   mul_op_assign -> REM_ASSIGN
Rule 226   mul_op_assign -> AND_ASSIGN
Rule 227   mul_op_assign -> SHL_ASSIGN
Rule 228   mul_op_assign -> SHR_ASSIGN
Rule 229   mul_op_assign -> AND_NOT_ASSIGN
Rule 230   ReturnStmt -> RETURN ExpressionList
Rule 231   ReturnStmt -> RETURN
Rule 232   BreakStmt -> BREAK Label
Rule 233   BreakStmt -> BREAK
Rule 234   ContinueStmt -> CONTINUE Label
Rule 235   ContinueStmt -> CONTINUE
Rule 236   GotoStmt -> GOTO Label
Rule 237   FallthroughStmt -> FALLTHROUGH
Rule 238   Block -> LBRACE StatementList RBRACE
Rule 239   IfStmt -> IF Expr Block else_stmt
Rule 240   IfStmt -> IF SimpleStmt SEMICOLON Expr else_stmt
Rule 241   else_stmt -> ELSE IfStmt
Rule 242   else_stmt -> ELSE Block
Rule 243   else_stmt -> <empty>
Rule 244   SwitchStmt -> ExprSwitchStmt
Rule 245   SwitchStmt -> TypeSwitchStmt
Rule 246   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expr LBRACE ExprCaseClauseMult RBRACE
Rule 247   ExprSwitchStmt -> SWITCH Expr LBRACE ExprCaseClauseMult RBRACE
Rule 248   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON LBRACE ExprCaseClauseMult RBRACE
Rule 249   ExprSwitchStmt -> SWITCH LBRACE ExprCaseClauseMult RBRACE
Rule 250   ExprCaseClauseMult -> ExprCaseClause ExprCaseClauseMult
Rule 251   ExprCaseClauseMult -> <empty>
Rule 252   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 253   ExprSwitchCase -> CASE ExpressionList
Rule 254   ExprSwitchCase -> DEFAULT
Rule 255   TypeSwitchStmt -> SWITCH SimpleStmt SEMICOLON TypeSwitchGuard LBRACE TypeCaseClauseMult RBRACE
Rule 256   TypeSwitchStmt -> SWITCH TypeSwitchGuard LBRACE TypeCaseClauseMult RBRACE
Rule 257   TypeSwitchGuard -> IDENT DEFINE PrimaryExpr PERIOD LPAREN TYPE RPAREN
Rule 258   TypeSwitchGuard -> PrimaryExpr PERIOD LPAREN TYPE RPAREN
Rule 259   TypeCaseClauseMult -> TypeCaseClause TypeCaseClauseMult
Rule 260   TypeCaseClauseMult -> <empty>
Rule 261   TypeCaseClause -> CASE TypeList COLON StatementList
Rule 262   TypeCaseClause -> DEFAULT COLON StatementList
Rule 263   TypeList -> Type
Rule 264   TypeList -> IDENT
Rule 265   TypeList -> IDENT PERIOD IDENT
Rule 266   TypeList -> Type COMMA TypeList
Rule 267   TypeList -> IDENT COMMA TypeList
Rule 268   TypeList -> IDENT PERIOD IDENT COMMA TypeList
Rule 269   ForStmt -> FOR Condition Block
Rule 270   ForStmt -> FOR ForClause Block
Rule 271   ForStmt -> FOR RangeClause Block
Rule 272   Condition -> Expr
Rule 273   ForClause -> InitStmt SEMICOLON Condition SEMICOLON PostStmt
Rule 274   ForClause -> InitStmt SEMICOLON SEMICOLON PostStmt
Rule 275   InitStmt -> SimpleStmt
Rule 276   PostStmt -> SimpleStmt
Rule 277   RangeClause -> RangeList RANGE Expr
Rule 278   RangeList -> ExpressionList ASSIGN
Rule 279   RangeList -> IdentifierList DEFINE
Rule 280   RangeList -> <empty>
Rule 281   TypeT -> ArrayType
Rule 282   TypeT -> StructType
Rule 283   TypeT -> SliceType
Rule 284   TypeT -> MapType
Rule 285   TypeT -> FunctionType
Rule 286   TypeT -> LPAREN TypeT RPAREN
Rule 287   TypeT -> LPAREN IDENT RPAREN
Rule 288   TypeT -> LPAREN IDENT PERIOD IDENT RPAREN
Rule 289   Type -> TypeT
Rule 290   Type -> PointerType
Rule 291   Type -> LPAREN PointerType RPAREN

Terminals, with rules where they appear

ADD                  : 70 82
ADD_ASSIGN           : 219
AND                  : 79 87
AND_ASSIGN           : 226
AND_NOT              : 80
AND_NOT_ASSIGN       : 229
ASSIGN               : 24 25 26 151 152 153 161 162 163 164 218 278
BREAK                : 232 233
CASE                 : 253 261
COLON                : 108 124 125 126 127 128 128 129 129 204 252 261 262
COMMA                : 28 60 102 106 132 134 135 136 136 138 139 140 140 142 143 144 144 177 179 180 181 182 266 267 268
CONST                : 20 21
CONTINUE             : 234 235
DEC                  : 214
DEFAULT              : 254 262
DEFINE               : 168 257 279
ELSE                 : 241 242
EQL                  : 64
FALLTHROUGH          : 237
FLOAT                : 92
FOR                  : 269 270 271
FUNC                 : 58 113 169 170
GEQ                  : 69
GOTO                 : 236
GTR                  : 68
IDENT                : 2 10 25 26 26 27 28 32 33 33 38 39 39 42 43 43 46 47 48 48 49 49 51 52 52 56 57 57 100 101 101 115 116 116 123 137 138 139 140 141 141 142 142 143 143 144 144 151 152 152 153 153 153 154 155 155 156 156 156 162 163 163 166 167 167 171 179 180 180 184 185 185 188 189 189 205 257 264 265 265 267 268 268 287 288 288
IF                   : 239 240
IMAG                 : 93
IMPORT               : 5 6
INC                  : 213
INT                  : 91
LAND                 : 63
LBRACE               : 34 102 103 104 238 246 247 248 249 255 256
LBRACK               : 29 53 54 122 124 125 126 127 128 129
LEQ                  : 67
LOR                  : 62
LPAREN               : 6 21 117 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 146 158 175 176 177 257 258 286 287 288 291
LSS                  : 66
MAP                  : 54
MUL                  : 46 48 50 51 52 74 86
MUL_ASSIGN           : 223
NEQ                  : 65
NOT                  : 84
OR                   : 72
OR_ASSIGN            : 221
PACKAGE              : 2
PERIOD               : 9 26 33 39 43 48 49 52 57 101 116 123 141 142 143 144 153 156 163 167 180 185 189 257 258 265 268 288
QUO                  : 75
QUO_ASSIGN           : 224
RANGE                : 277
RBRACE               : 34 102 103 104 238 246 247 248 249 255 256
RBRACK               : 29 53 54 122 124 125 126 127 128 129
REM                  : 76
REM_ASSIGN           : 225
RETURN               : 230 231
RPAREN               : 6 21 117 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 146 158 175 176 177 257 258 286 287 288 291
RUNE                 : 94
SEMICOLON            : 1 3 7 13 22 35 147 159 190 240 246 248 255 273 273 274 274
SHL                  : 77
SHL_ASSIGN           : 227
SHR                  : 78
SHR_ASSIGN           : 228
STRING               : 12 45 95
STRUCT               : 34
SUB                  : 71 83
SUB_ASSIGN           : 220
SWITCH               : 246 247 248 249 255 256
TYPE                 : 145 146 257 258
VAR                  : 157 158
XOR                  : 73 85
XOR_ASSIGN           : 222
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 149
Arguments            : 96 121
ArrayLength          : 29
ArrayType            : 97 281
Assignment           : 209
BasicLit             : 88
Block                : 172 200 239 242 269 270 271
BreakStmt            : 197
CompositeLit         : 89
Condition            : 269 273
ConstDecl            : 17
ConstSpec            : 20 22
ConstSpecMult        : 21 22
ContinueStmt         : 198
Decl                 : 15 192
Element              : 107 108
ElementList          : 102 103 106
ElementType          : 29 53 54
EmbeddedField        : 40 44
EmptyStmt            : 206
Expr                 : 30 59 60 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 109 111 117 122 124 124 125 126 128 128 129 129 129 212 213 214 239 240 246 247 272 277
ExprCaseClause       : 250
ExprCaseClauseMult   : 246 247 248 249 250
ExprSwitchCase       : 252
ExprSwitchStmt       : 244
ExpressionList       : 24 25 26 60 131 132 135 136 139 140 143 144 161 162 163 164 168 215 215 230 253 278
ExpressionStmt       : 207
FallthroughStmt      : 199
FieldDecl            : 35
FieldDeclMult        : 34 35
ForClause            : 270
ForStmt              : 203
FuncDecl             : 16
FunctionBody         : 113 169
FunctionLit          : 90
FunctionName         : 169 170
FunctionType         : 285
GotoStmt             : 195
IdentifierList       : 24 25 26 28 37 38 39 41 42 43 161 162 163 164 165 166 167 168 183 184 185 279
IfStmt               : 201 241
ImportDecl           : 3
ImportDeclMult       : 1 3
ImportPath           : 9 10 11
ImportSpec           : 5 7
ImportSpecMult       : 6 7
IncDecStmt           : 208
Index                : 119
InitStmt             : 273 274
Key                  : 108
KeyType              : 54
KeyedElement         : 105 106
Label                : 204 232 234 236
LabeledStmt          : 193
Lit                  : 114
LiteralValue         : 97 98 99 100 101 110 112
MapType              : 99 284
PackageClause        : 1
ParameterDecl        : 178 182
ParameterList        : 176 177 179 180 181 182
Parameters           : 173 174 186
PointerType          : 290 291
PostStmt             : 273 274
PrimaryExpr          : 81 118 119 120 121 257 258
RangeClause          : 271
RangeList            : 277
Result               : 173
ReturnStmt           : 196
Selector             : 118
ShortVarDecl         : 210
Signature            : 58 113 169 170
SimpleStmt           : 194 240 246 248 255 275 276
Slice                : 120
SliceType            : 98 283
SourceFile           : 0
Statement            : 190 204
StatementList        : 190 238 252 261 262
StructType           : 96 282
SwitchStmt           : 202
Tag                  : 41 42 43 44
TopLevelDecl         : 13
TopLevelDeclMult     : 1 13
Type                 : 24 31 37 41 50 55 151 154 161 165 181 183 187 263 266
TypeCaseClause       : 259
TypeCaseClauseMult   : 255 256 259
TypeDecl             : 19
TypeList             : 261 266 267 268
TypeSpec             : 145 147
TypeSpecMult         : 146 147
TypeSwitchGuard      : 255 256
TypeSwitchStmt       : 245
TypeT                : 133 134 135 136 286 289
Typedef              : 150
UnaryExpr            : 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 82 83 84 85 86 87
VarDecl              : 18
VarMult              : 158 159
VarSpec              : 157 159
add_op_assign        : 216
assign_op            : 215
else_stmt            : 239 240
mul_op_assign        : 217


state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult
    (2) PackageClause -> . PACKAGE IDENT

    PACKAGE         shift and go to state 3

    SourceFile                     shift and go to state 1
    PackageClause                  shift and go to state 2

state 1

    (0) S' -> SourceFile .



state 2

    (1) SourceFile -> PackageClause . SEMICOLON ImportDeclMult TopLevelDeclMult

    SEMICOLON       shift and go to state 4


state 3

    (2) PackageClause -> PACKAGE . IDENT

    IDENT           shift and go to state 5


state 4

    (1) SourceFile -> PackageClause SEMICOLON . ImportDeclMult TopLevelDeclMult
    (3) ImportDeclMult -> . ImportDecl SEMICOLON ImportDeclMult
    (4) ImportDeclMult -> .
    (5) ImportDecl -> . IMPORT ImportSpec
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecMult RPAREN

    FUNC            reduce using rule 4 (ImportDeclMult -> .)
    CONST           reduce using rule 4 (ImportDeclMult -> .)
    VAR             reduce using rule 4 (ImportDeclMult -> .)
    TYPE            reduce using rule 4 (ImportDeclMult -> .)
    $end            reduce using rule 4 (ImportDeclMult -> .)
    IMPORT          shift and go to state 8

    ImportDeclMult                 shift and go to state 6
    ImportDecl                     shift and go to state 7

state 5

    (2) PackageClause -> PACKAGE IDENT .

    SEMICOLON       reduce using rule 2 (PackageClause -> PACKAGE IDENT .)


state 6

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclMult . TopLevelDeclMult
    (13) TopLevelDeclMult -> . TopLevelDecl SEMICOLON TopLevelDeclMult
    (14) TopLevelDeclMult -> .
    (15) TopLevelDecl -> . Decl
    (16) TopLevelDecl -> . FuncDecl
    (17) Decl -> . ConstDecl
    (18) Decl -> . VarDecl
    (19) Decl -> . TypeDecl
    (169) FuncDecl -> . FUNC FunctionName Signature FunctionBody
    (170) FuncDecl -> . FUNC FunctionName Signature
    (20) ConstDecl -> . CONST ConstSpec
    (21) ConstDecl -> . CONST LPAREN ConstSpecMult RPAREN
    (157) VarDecl -> . VAR VarSpec
    (158) VarDecl -> . VAR LPAREN VarMult RPAREN
    (145) TypeDecl -> . TYPE TypeSpec
    (146) TypeDecl -> . TYPE LPAREN TypeSpecMult RPAREN

    $end            reduce using rule 14 (TopLevelDeclMult -> .)
    FUNC            shift and go to state 16
    CONST           shift and go to state 17
    VAR             shift and go to state 18
    TYPE            shift and go to state 19

    TopLevelDeclMult               shift and go to state 9
    TopLevelDecl                   shift and go to state 10
    Decl                           shift and go to state 11
    FuncDecl                       shift and go to state 12
    ConstDecl                      shift and go to state 13
    VarDecl                        shift and go to state 14
    TypeDecl                       shift and go to state 15

state 7

    (3) ImportDeclMult -> ImportDecl . SEMICOLON ImportDeclMult

    SEMICOLON       shift and go to state 20


state 8

    (5) ImportDecl -> IMPORT . ImportSpec
    (6) ImportDecl -> IMPORT . LPAREN ImportSpecMult RPAREN
    (9) ImportSpec -> . PERIOD ImportPath
    (10) ImportSpec -> . IDENT ImportPath
    (11) ImportSpec -> . ImportPath
    (12) ImportPath -> . STRING

    LPAREN          shift and go to state 22
    PERIOD          shift and go to state 23
    IDENT           shift and go to state 25
    STRING          shift and go to state 26

    ImportSpec                     shift and go to state 21
    ImportPath                     shift and go to state 24

state 9

    (1) SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult .

    $end            reduce using rule 1 (SourceFile -> PackageClause SEMICOLON ImportDeclMult TopLevelDeclMult .)


state 10

    (13) TopLevelDeclMult -> TopLevelDecl . SEMICOLON TopLevelDeclMult

    SEMICOLON       shift and go to state 27


state 11

    (15) TopLevelDecl -> Decl .

    SEMICOLON       reduce using rule 15 (TopLevelDecl -> Decl .)


state 12

    (16) TopLevelDecl -> FuncDecl .

    SEMICOLON       reduce using rule 16 (TopLevelDecl -> FuncDecl .)


state 13

    (17) Decl -> ConstDecl .

    SEMICOLON       reduce using rule 17 (Decl -> ConstDecl .)


state 14

    (18) Decl -> VarDecl .

    SEMICOLON       reduce using rule 18 (Decl -> VarDecl .)


state 15

    (19) Decl -> TypeDecl .

    SEMICOLON       reduce using rule 19 (Decl -> TypeDecl .)


state 16

    (169) FuncDecl -> FUNC . FunctionName Signature FunctionBody
    (170) FuncDecl -> FUNC . FunctionName Signature
    (171) FunctionName -> . IDENT

    IDENT           shift and go to state 29

    FunctionName                   shift and go to state 28

state 17

    (20) ConstDecl -> CONST . ConstSpec
    (21) ConstDecl -> CONST . LPAREN ConstSpecMult RPAREN
    (24) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (25) ConstSpec -> . IdentifierList IDENT ASSIGN ExpressionList
    (26) ConstSpec -> . IdentifierList IDENT PERIOD IDENT ASSIGN ExpressionList
    (27) IdentifierList -> . IDENT
    (28) IdentifierList -> . IDENT COMMA IdentifierList

    LPAREN          shift and go to state 31
    IDENT           shift and go to state 33

    ConstSpec                      shift and go to state 30
    IdentifierList                 shift and go to state 32

state 18

    (157) VarDecl -> VAR . VarSpec
    (158) VarDecl -> VAR . LPAREN VarMult RPAREN
    (161) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (162) VarSpec -> . IdentifierList IDENT ASSIGN ExpressionList
    (163) VarSpec -> . IdentifierList IDENT PERIOD IDENT ASSIGN ExpressionList
    (164) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (165) VarSpec -> . IdentifierList Type
    (166) VarSpec -> . IdentifierList IDENT
    (167) VarSpec -> . IdentifierList IDENT PERIOD IDENT
    (27) IdentifierList -> . IDENT
    (28) IdentifierList -> . IDENT COMMA IdentifierList

    LPAREN          shift and go to state 35
    IDENT           shift and go to state 33

    VarSpec                        shift and go to state 34
    IdentifierList                 shift and go to state 36

state 19

    (145) TypeDecl -> TYPE . TypeSpec
    (146) TypeDecl -> TYPE . LPAREN TypeSpecMult RPAREN
    (149) TypeSpec -> . AliasDecl
    (150) TypeSpec -> . Typedef
    (151) AliasDecl -> . IDENT ASSIGN Type
    (152) AliasDecl -> . IDENT ASSIGN IDENT
    (153) AliasDecl -> . IDENT ASSIGN IDENT PERIOD IDENT
    (154) Typedef -> . IDENT Type
    (155) Typedef -> . IDENT IDENT
    (156) Typedef -> . IDENT IDENT PERIOD IDENT

    LPAREN          shift and go to state 38
    IDENT           shift and go to state 41

    TypeSpec                       shift and go to state 37
    AliasDecl                      shift and go to state 39
    Typedef                        shift and go to state 40

state 20

    (3) ImportDeclMult -> ImportDecl SEMICOLON . ImportDeclMult
    (3) ImportDeclMult -> . ImportDecl SEMICOLON ImportDeclMult
    (4) ImportDeclMult -> .
    (5) ImportDecl -> . IMPORT ImportSpec
    (6) ImportDecl -> . IMPORT LPAREN ImportSpecMult RPAREN

    FUNC            reduce using rule 4 (ImportDeclMult -> .)
    CONST           reduce using rule 4 (ImportDeclMult -> .)
    VAR             reduce using rule 4 (ImportDeclMult -> .)
    TYPE            reduce using rule 4 (ImportDeclMult -> .)
    $end            reduce using rule 4 (ImportDeclMult -> .)
    IMPORT          shift and go to state 8

    ImportDecl                     shift and go to state 7
    ImportDeclMult                 shift and go to state 42

state 21

    (5) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 5 (ImportDecl -> IMPORT ImportSpec .)


state 22

    (6) ImportDecl -> IMPORT LPAREN . ImportSpecMult RPAREN
    (7) ImportSpecMult -> . ImportSpec SEMICOLON ImportSpecMult
    (8) ImportSpecMult -> .
    (9) ImportSpec -> . PERIOD ImportPath
    (10) ImportSpec -> . IDENT ImportPath
    (11) ImportSpec -> . ImportPath
    (12) ImportPath -> . STRING

    RPAREN          reduce using rule 8 (ImportSpecMult -> .)
    PERIOD          shift and go to state 23
    IDENT           shift and go to state 25
    STRING          shift and go to state 26

    ImportSpecMult                 shift and go to state 43
    ImportSpec                     shift and go to state 44
    ImportPath                     shift and go to state 24

state 23

    (9) ImportSpec -> PERIOD . ImportPath
    (12) ImportPath -> . STRING

    STRING          shift and go to state 26

    ImportPath                     shift and go to state 45

state 24

    (11) ImportSpec -> ImportPath .

    SEMICOLON       reduce using rule 11 (ImportSpec -> ImportPath .)


state 25

    (10) ImportSpec -> IDENT . ImportPath
    (12) ImportPath -> . STRING

    STRING          shift and go to state 26

    ImportPath                     shift and go to state 46

state 26

    (12) ImportPath -> STRING .

    SEMICOLON       reduce using rule 12 (ImportPath -> STRING .)


state 27
